--- a/src/js/package.json
+++ b/src/js/package.json
@@ -9,10 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "unfetch": "^4.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -23,6 +24,7 @@
       "react-app/jest"
     ]
   },
+  "proxy" : "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
